Fixed dropdown z-index added shadows and nav to second page

--- a/cssFun/css/main.css
+++ b/cssFun/css/main.css
@@ -225,6 +225,8 @@ INTRO (INDEX)
 ------------
 */
 nav {
+  -webkit-box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
   background-color: white;
   position: fixed;
   left: 0;
@@ -234,15 +236,38 @@ nav {
     position: absolute;
     top: -40px;
     left: 50px; }
-    nav figure img:active {
+    nav figure img:hover {
       -webkit-animation-name: sharkyRoll;
               animation-name: sharkyRoll;
-      -webkit-animation-duration: 2s;
-              animation-duration: 2s;
+      -webkit-animation-duration: 1.5s;
+              animation-duration: 1.5s;
       -webkit-animation-timing-function: linear;
               animation-timing-function: linear; }
 
 @-webkit-keyframes sharkyRoll {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg); }
+  20% {
+    -webkit-transform: rotate(30deg);
+            transform: rotate(30deg); }
+  40% {
+    -webkit-transform: rotate(-30deg);
+            transform: rotate(-30deg); }
+  60% {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg); }
+  80% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg); }
+  90% {
+    -webkit-transform: rotate(270deg);
+            transform: rotate(270deg); }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); } }
+
+@keyframes sharkyRoll {
   0% {
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg); }
@@ -282,6 +307,7 @@ nav {
       color: #000;
       font-weight: 700; }
     .primary-nav > li > a {
+      position: relative;
       z-index: 100;
       float: left;
       padding: 25px 0;
@@ -295,7 +321,7 @@ nav {
   -webkit-transition: all 0.4s;
   transition: all 0.4s; }
   .has-sub-menu ul {
-    z-index: 1;
+    z-index: 10;
     position: absolute;
     top: 70px;
     width: 150px;
@@ -306,6 +332,14 @@ nav {
     overflow: hidden;
     display: none;
     background-color: white; }
+    .has-sub-menu ul li a {
+      position: relative;
+      z-index: 5;
+      display: block;
+      padding: 25px 0; }
+      .has-sub-menu ul li a:hover {
+        background-color: #cc484c;
+        color: white; }
   .has-sub-menu:hover ul {
     display: block;
     -webkit-animation-name: slideDown;
@@ -327,12 +361,19 @@ nav {
     -webkit-transform: translateY(0%);
             transform: translateY(0%);
     opacity: 1; } }
-  .has-sub-menu li a {
-    display: block;
-    padding: 25px 0; }
-    .has-sub-menu li a:hover {
-      background-color: #cc484c;
-      color: white; }
+
+@keyframes slideDown {
+  0% {
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+    opacity: 0; }
+  95% {
+    -webkit-transform: translateY(3%);
+            transform: translateY(3%); }
+  100% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+    opacity: 1; } }
 
 nav li a {
   font-family: Arial, Helvetica, sans-serif;
